add test and data